--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/EditProduct.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Merchant/EditProduct.cshtml
@@ -1,4 +1,5 @@
-﻿@using UWT.Web.Extensions
+﻿@using System.ServiceModel.Channels
+@using UWT.Web.Extensions
 @using UWT.Web.Models
 @model ProductViewModel
 @{
@@ -82,6 +83,18 @@
                     </div>
                 </div>
             }
+            @if (ViewBag.Messages != null && ViewBag.Messages > 0)
+            {
+                <div class="form-group">
+                    <label class="col-md-5 control-label">Zahtjevi:</label>
+                    <div class="col-md-6">
+                        <div class="input-group text-center">
+                            <input readonly name="Messages" class="form-control text-right" value="@ViewBag.Messages"/>
+                            <span class="input-group-addon"></span>
+                        </div>
+                    </div>
+                </div>
+            }
             <div class="form-group">
                 <div class="col-md-offset-5 col-md-6 btn-group">
                     <input type="submit" class="btn btn-primary" value="Spremi promjene" />
@@ -91,7 +104,7 @@
         </div>
         <div class="col-md-6">
             <div class="form-group">
-                @Html.Partial("ImageEditor", new ImageEditorModel { DefaultImage = Model.Image.Replace("~", ""), FieldName = "image", Label = "Slika proizvoda:" }, ViewData)
+                @Html.Partial("ImageEditor", new ImageEditorModel {DefaultImage = Model.Image.Replace("~", ""), FieldName = "image", Label = "Slika proizvoda:"}, ViewData)
             </div>
         </div>
     </div>
