--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Manage/ChangePassword.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Manage/ChangePassword.cshtml
@@ -1,10 +1,12 @@
 ﻿@model UWT.Web.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Promjena lozinke";
+    ViewBag.MainTitle = "Promjena lozinke";
 }
-
-<h2>@ViewBag.Title.</h2>
-
+@section buttons
+{
+    <a href="@Url.Action("Index")" class="btn btn-default">Natrag</a>
+}
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
