--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Manage/Index.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Manage/Index.cshtml
@@ -4,7 +4,10 @@
     ViewBag.MainTitle = ViewBag.Title;
     ViewBag.Subtitle = "Vaš račun:" + Model.UserName;
 }
-
+@section buttons
+{
+    <a href="@Url.Action("ChangePassword")" class="btn btn-default">Promijeni lozinku</a>
+}
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
     @using (Html.BeginForm("Index", "Manage", FormMethod.Post, new {@class = "form-horizontal", role = "form", enctype = "multipart/form-data"}))
@@ -29,6 +32,12 @@
                     @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-3 control-label" })
                     <div class="col-md-9">
                         @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Address, new { @class = "col-md-3 control-label" })
+                    <div class="col-md-9">
+                        @Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
                     </div>
                 </div>
                 <div class="form-group">
