--- a/UniverzalnaWebTrgovina/UWT.Web/Views/Membership/Register.cshtml
+++ b/UniverzalnaWebTrgovina/UWT.Web/Views/Membership/Register.cshtml
@@ -41,12 +41,12 @@
                     @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
                 </div>
             </div>
-            @*<div class="form-group">
-                    @Html.LabelFor(m => m.Address, new {@class = "col-md-2 control-label"})
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
-                    </div>
-                </div>*@
+            <div class="form-group">
+                @Html.LabelFor(m => m.Address, new {@class = "col-md-4 control-label"})
+                <div class="col-md-8">
+                    @Html.TextBoxFor(m => m.Address, new { @class = "form-control" })
+                </div>
+            </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Password, new { @class = "col-md-4 control-label" })
                 <div class="col-md-8">
