--- a/UniverzalnaWebTrgovina/UWT.App/ProductPage.xaml
+++ b/UniverzalnaWebTrgovina/UWT.App/ProductPage.xaml
@@ -5,11 +5,13 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
+    xmlns:charting="using:WinRTXamlToolkit.Controls.DataVisualization.Charting"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
             <RowDefinition Height="50"/>
@@ -24,20 +26,34 @@
             <TextBlock FontSize="32" Margin="10" Text="{Binding Title}"/>
         </StackPanel>
 
-        <TextBlock Grid.Row="1" Margin="10" FontSize="24">Cijena</TextBlock>
+        <TextBlock Grid.Row="1" Grid.Column="0" Margin="10" FontSize="24">Cijena</TextBlock>
         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
             <TextBlock Text="{Binding DiscountedPrice}" Margin="10" FontSize="24"/>
             <TextBlock Text="kn" Margin="10" FontSize="24"/>
         </StackPanel>
 
-        <TextBlock Grid.Row="2" Margin="10" FontSize="24">Broj proizvoda</TextBlock>
-        <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding Count}" Margin="10" FontSize="24"/>
+        <TextBlock Grid.Row="2" Grid.Column="0" Margin="10" FontSize="24">Dostupno</TextBlock>
+        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
+            <TextBlock Text="{Binding Count}" Margin="10" FontSize="24"/>
+            <TextBlock Text="kom" Margin="10" FontSize="24"/>
+        </StackPanel>
 
-        <TextBlock Grid.Row="3" Margin="10" FontSize="24">Prodano</TextBlock>
+        <TextBlock Grid.Row="3" Grid.Column="0" Margin="10" FontSize="24">Prodano</TextBlock>
         <StackPanel Grid.Row="3" Grid.Column="1" Orientation="Horizontal">
             <TextBlock Text="{Binding NumberSold}" Margin="10" FontSize="24"/>
             <TextBlock Text="kom" Margin="10" FontSize="24"/>
         </StackPanel>
         
+        <TextBlock Grid.Row="4" Grid.Column="0" Margin="10" FontSize="24" Visibility="{Binding MessagesVisible}">Upiti</TextBlock>
+        <TextBlock Grid.Row="4" Grid.Column="1" Text="{Binding Messages}" Margin="10" FontSize="24" Visibility="{Binding MessagesVisible}"/>
+
+        <charting:Chart Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2">
+            <charting:LineSeries
+                Title="Prodaja" 
+                Margin="0" IndependentValuePath="Day" 
+                DependentValuePath="Sold" 
+                IsSelectionEnabled="True"
+                ItemsSource="{Binding Sails}" />
+        </charting:Chart>
     </Grid>
 </Page>
